--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
     <h3>La natura come risorsa essenziale</h3>
     <p>La natura ci fornisce tutto ciò di cui abbiamo bisogno per vivere. L'aria che respiriamo, l'acqua che beviamo e il cibo che mangiamo provengono direttamente dagli ecosistemi naturali. Le foreste agiscono come polmoni verdi, purificando l'aria e assorbendo anidride carbonica. Le zone umide e i fiumi ci forniscono acqua dolce e pulita. I suoli fertili sono essenziali per l'agricoltura. Non preservare questi sistemi significa mettere a rischio la nostra stessa sopravvivenza.</p>
     <h3>Benefici per la salute e il benessere</h3>
+    <script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'ke3kkzx838',
+    });
+    </script>
     <p>Oltre ai benefici pratici, la natura ha un profondo impatto sul nostro benessere mentale e fisico. Passare del tempo in mezzo alla natura, che sia un parco cittadino o una montagna incontaminata, riduce lo stress, migliora l'umore e favorisce la creatività.  La biofilia, l'innata tendenza umana a connettersi con la natura, dimostra quanto siamo profondamente legati ad essa.</p>
     <h3>Cosa possiamo fare?</h3>
     <p>La sfida di preservare la natura non è un compito solo per scienziati o governi, ma una responsabilità collettiva. Ogni piccola azione conta. Possiamo iniziare riducendo il nostro consumo, riciclando correttamente, sostenendo aziende sostenibili e partecipando a iniziative locali di pulizia o riforestazione. Educare le nuove generazioni sull'importanza della conservazione è altrettanto cruciale.
