--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link href="style.css" rel="stylesheet">
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <title>Diario della natura</title>
+  <script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
+  
   
     
 </head>
