--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
     <p>​La natura è la nostra casa, il nostro sostentamento e la fonte della nostra stessa esistenza. Spesso diamo per scontata la sua bellezza e la sua generosità, ma è fondamentale comprendere che la sua conservazione non è un optional, bensì una necessità impellente per il benessere di tutti gli esseri viventi, inclusi noi stessi.</p>
     <br>
     <h3>equilibrio delicato</h3>
+    <script type="text/javascript">
+    aclib.runInPagePush({
+        zoneId: '10303298',
+        maxAds: 2,
+    });
+    </script>
+    
     <p>Ogni ecosistema, dalla foresta pluviale al deserto arido, è un complesso sistema di interconnessioni. Ogni specie, per quanto piccola, ha un ruolo specifico che contribuisce a mantenere questo delicato equilibrio. Quando una specie scompare, o un habitat viene distrutto, si innesca un effetto a cascata che può alterare l'intero ecosistema.  La perdita di biodiversità, accelerata dalle attività umane, minaccia la stabilità del nostro pianeta e di conseguenza anche la nostra.</p>
     <h3>La natura come risorsa essenziale</h3>
     <p>La natura ci fornisce tutto ciò di cui abbiamo bisogno per vivere. L'aria che respiriamo, l'acqua che beviamo e il cibo che mangiamo provengono direttamente dagli ecosistemi naturali. Le foreste agiscono come polmoni verdi, purificando l'aria e assorbendo anidride carbonica. Le zone umide e i fiumi ci forniscono acqua dolce e pulita. I suoli fertili sono essenziali per l'agricoltura. Non preservare questi sistemi significa mettere a rischio la nostra stessa sopravvivenza.</p>
