--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
   <div class="container">
     <h1 class="container_LightGray">Blog del Mese</h1>
     <h2>La Natura va preservata!</h2>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4298411042113183"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-4298411042113183"
+     data-ad-slot="2826903844"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <br>
     <h3>L'importanza vitale di preservare la natura</h3>
     <p>​La natura è la nostra casa, il nostro sostentamento e la fonte della nostra stessa esistenza. Spesso diamo per scontata la sua bellezza e la sua generosità, ma è fondamentale comprendere che la sua conservazione non è un optional, bensì una necessità impellente per il benessere di tutti gli esseri viventi, inclusi noi stessi.</p>
