--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="contatti.html">Contattaci</a>
   </div>
   <link href="style.css" rel="stylesheet">
-  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Diario della natura</title>
   
   
