--- a/index.html
+++ b/index.html
@@ -106,5 +106,12 @@
     <h4>Ad</h4>
     <a href="UpsidedownHosting.html">Hosted by upsidedownHosting</a>
   </div>
+  
+  <br>
+  <br>
+  <div class="container_LightGray">
+    <h1>Sito lento?</h1>
+    <a href="Status.html">Controlla lo status qui!</a>
+    
 </body>
 </html>
