--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <br>
   <div class="container_LightGray">
     <h1>Sito lento?</h1>
-    <a href="Status.html">Controlla lo status qui!</a>
+    <a href="status.html">Controlla lo status qui!</a>
     
 </body>
 </html>
