--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
   <br>
   <div class="container_LightGray">
     <h1>Sito lento?</h1>
-    <a href="status.html">Controlla lo status qui!</a>
+    <a href="https://uptime.betterstack.com/team/t356596/status-pages/223903/edit">Controlla lo status qui!</a>
+    
+
     
 </body>
 </html>
