--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 <head>
   
-  
+
+  <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="223903" async="async" type="text/javascript"></script>
   <div class="container">
     <a href="Find_Blog.html">I nostri blog</a>
     <a href="crediti.html">Riguardo a noi</a>
