--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="container">
     <a href="Find_Blog.html">I nostri blog</a>
     <a href="crediti.html">Riguardo a noi</a>
-    <a href="404.html">Contattaci</a>
+    <a href="contatti.html">Contattaci</a>
   </div>
   <link href="style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
