--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   
 
   <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="223903" async="async" type="text/javascript"></script>
+  <meta name="google-site-verification" content="gGl0rNF4Gv13V1TOcya-jMO2nuiv1ihUXqb6mImFUoE" />
   <div class="container">
     <a href="Find_Blog.html">I nostri blog</a>
     <a href="crediti.html">Riguardo a noi</a>
