--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
   
     
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DJZ1PN1HJ7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DJZ1PN1HJ7');
+</script>
 <body>
   
   
