--- a/404.html
+++ b/404.html
@@ -6,6 +6,15 @@
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <title>Errore 839</title>
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DJZ1PN1HJ7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DJZ1PN1HJ7');
+</script>
 <body>
   <div class="container">
     <a href="index.html">Torna al homepage</a>
