--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="223903" async="async" type="text/javascript"></script>
   <meta name="google-site-verification" content="gGl0rNF4Gv13V1TOcya-jMO2nuiv1ihUXqb6mImFUoE" />
   <div class="container">
-    <a href="Find_Blog.html">I nostri blog</a>
-    <a href="crediti.html">Riguardo a noi</a>
-    <a href="contatti.html">Contattaci</a>
+    <a href="Find_Blotg.html">I nostri blog</a>
+    <a href="creditwi.html">Riguardo a noi</a>
+    <a href="contatati.html">Contattaci</a>
   </div>
   <link href="style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
