--- a/404.html
+++ b/404.html
@@ -21,9 +21,9 @@
   </div>
   <br>
   <div class="container">
-    <h1>Oh no!</h1>
-    <h2>Il nostri server stanno riscontrando dei problemi</h2>
-    <h2>Per favore riprovare più tardi</h2>
+    <h1>Oh no! il sito ceh stai cercando non esiste!</h1>
+    <h2>Se hai scritto il sito a mano per favore ricontrolla l'indirizzo che hai scritto</h2>
+    <h2>Se invece sei stao reindirizzato qui allora vould dire che la pagina che stai cercando non è disponibile</h2>
     <br>
     <br>
     <br>
