--- a/404.html
+++ b/404.html
@@ -21,13 +21,13 @@
   </div>
   <br>
   <div class="container">
-    <h1>Oh no! il sito ceh stai cercando non esiste!</h1>
+    <h1>Oh no! il sito che stai cercando non esiste!</h1>
     <h2>Se hai scritto il sito a mano per favore ricontrolla l'indirizzo che hai scritto</h2>
     <h2>Se invece sei stao reindirizzato qui allora vould dire che la pagina che stai cercando non è disponibile</h2>
     <br>
     <br>
     <br>
-    <h3>UpsidedownHosting</h3>
+    <h1>UpsidedownHosting</h1>
   </div>
 </body>
 </html>
