--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         if (userLanguage.startsWith('it')) {
             // Redirect to the Italian page.
             window.location.href = 'https://progetto-natura.vercel.app/it/index.html';
-            console.log("Redirecting user to italian page...")
+            console.log("Redirecting user to italian page...");
         } else {
             // Redirect to the non-Italian page.
             window.location.href = 'https://progetto-natura.vercel.app/english.html';
-            console.log("Redirecting User to English Unstable version...")
+            console.log("Redirecting User to English Unstable version...");
             
         }
     </script>
