--- a/it/index.html
+++ b/it/index.html
@@ -80,7 +80,7 @@
   <br>
   <div class="container_LightGray">
     <h1>Sito lento?</h1>
-    <a href="https://status-progetto-natura.betteruptime.com/">Controlla lo status qui!</a>
+    <a href="https://upsidedownproduction-progetto-natura.cronitorstatus.com/">Controlla lo status qui!</a>
     
 
     
